--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://i.ibb.co/6bYBDsM/Component-27-1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="3D print your survey data and 3D Model printing"
     />
+    <link rel="canonical" href="https://lyso.in" />
+
+    <meta name="robots" content="index,follow" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -33,7 +38,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1026.0.min.js"></script>
-    <title>React App</title>
+    <title>LYSO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
